2001-01-01  Michael Hayes  <mhayes@redhat.com>

	* loop.h (struct loop_movables): New.
	(LOOP_MOVABLES): New.
	(struct loop_info): Add movables field.
	* loop.c (struct movables): Delete.  Replace all uses
	with struct loop_movables.
	(the_movables): Delete.  Replace all uses with movables
	field in loop_info.
	(loop_movables_add, loop_movables_free): New functions.
	(scan_loop): Use xmalloc instead of alloca for movables.
	Call loop_movables_free.
	
2001-01-01  Michael Hayes  <mhayes@redhat.com>	

	* loop.c (debug_loops): New.

2000-12-31  Philip Blundell  <philb@gnu.org>

	* config/arm/linux-gas.h (CLEAR_INSN_CACHE): Add missing asm
	operands.

2000-12-30  Richard Henderson  <rth@redhat.com>

	* dbxout.c (dbxout_block): Invert logic on eliding LBRAC/RBRAC.
	Initialize variables properly for DBX_LBRAC_FIRST.

2000-12-30  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* expr.c (expand_expr, case COMPONENT_REF): Fix typo in last change.

2000-12-30  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* builtins.c (validate_arglist): New function, use it.

2000-12-30  Philip Blundell  <philb@gnu.org>

	* config/arm/arm.c (arm_expand_prologue): Fix typos in error 
	message and comment.  Note location of testcase for an unhandled
	situation.

2000-12-30  Jeffrey Oldham  <oldham@codesourcery.com>

	* defaults.h (BUILD_VA_LIST_TYPE): New definition.
	* tree.c (build_common_tree_nodes_2): Ensure the va_list_type_node
	is a copy, not an alias.

2000-12-30  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* calls.c (calls_function_1, case CONSTRUCTOR): New case.

	* alias.c (alias_sets_conflict_p): New function.
	(mems_in_disjoint_alias_sets_p): Use it.
	(readonly_fields_p): Moved from expr.c; check for record type.
	(objects_must_conflict_p): New function.
	* calls.c (expand_call): Use assign_temp as much as possible, use
	readonly variant if assigned once, and don't set memory attributes.
	(emit_library_call_value_1, store_one_arg): Likewise.